# agentic-flagship-api

./: .env.example  README.md  pyproject.toml
app/: agent.py  browser.py  browser_tools.py  config.py  logging.py  main.py  routes.py  security.py  tools.py
