[project]
name = "agentic-flagship-api"
version = "0.1.0"
description = "Agentic web research API powered by LangGraph and Playwright"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.1",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
